ADD_SUBDIRECTORY( edp_irp6p )
ADD_SUBDIRECTORY( edp_irp6ot )
ADD_SUBDIRECTORY( transformator )
ADD_SUBDIRECTORY( viz_zbik3d )
ADD_SUBDIRECTORY( ecp_proxy )
ADD_SUBDIRECTORY( gazebo_position )
ADD_SUBDIRECTORY( gazebo_laser )
ADD_SUBDIRECTORY( protonek_position )
ADD_SUBDIRECTORY( Laser_tilt )
ADD_SUBDIRECTORY( laser_pointcloud )
ADD_SUBDIRECTORY( vis_peekabot )
ADD_SUBDIRECTORY( ATI6284 )
